--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,13 @@
 {
   "presets": [
     [
-      "es2015",
+      "env",
       {
+        "targets": {
+          "node": "6.0.0"
+        },
         "modules": false
       }
     ]
-  ],
-  "plugins": [
-    "external-helpers"
   ]
 }
