--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "type": "git",
     "url": "git+https://github.com/nuintun/rollup-plugin-css.git"
   },
-  "keywords": [
-    "rollup",
-    "css"
-  ],
+  "engines": {
+    "node": ">=6.0.0"
+  },
+  "keywords": ["rollup", "css"],
   "author": "nuintun",
   "license": "MIT",
   "bugs": {
@@ -18,21 +18,18 @@
   },
   "homepage": "https://github.com/nuintun/rollup-plugin-css#readme",
   "dependencies": {
-    "chalk": "^2.1.0",
-    "concat-with-sourcemaps": "^1.0.4",
-    "fs-extra": "^4.0.1",
-    "postcss": "^6.0.10",
+    "chalk": "^2.3.1",
+    "concat-with-sourcemaps": "^1.0.5",
+    "fs-extra": "^5.0.0",
+    "postcss": "^6.0.19",
     "reserved-words": "^0.1.2",
     "rollup-pluginutils": "^2.0.1",
-    "style-inject": "^0.1.2"
+    "style-inject": "^0.3.0"
   },
   "devDependencies": {
-    "rollup": "^0.49.1",
-    "rollup-plugin-babel": "^3.0.2",
+    "rollup": "^0.56.3",
+    "rollup-plugin-babel": "^3.0.3",
     "babel-core": "^6.26.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-decorators": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-env": "^1.6.1"
   }
 }
